Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-12242

forestdb needs a way to create in-memory snapshot

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • feature-backlog
    • feature-backlog
    • forestdb
    • Security Level: Public
    • None
    • Triaged
    • Unknown

    Description

      fdb_snapshot_open() requires the user to first issue an fdb_commit since the sequence number needs to match with that of a committed db header.
      Since commit is an expensive option in terms of disk io, forestdb needs to support an in-memory snapshot creation which does not require the user to issue commit.
      Such a snapshot need not be durable across crashes or restarts.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            sundar Sundar Sridharan (Inactive)
            sundar Sundar Sridharan (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty